# balance_application

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: routes.py  schemas.py
app/core/: config.py
app/db/: models.py  session.py
app/db/repositories/: transaction.py  user.py
app/grpc/: balance.proto  balance_pb2.py  balance_pb2_grpc.py  grpc_server.py  grpc_test_client.py
app/services/: balance_service.py
