[tool.poetry]
name = "balance-application"
version = "0.1.0"
description = ""
authors = ["Олег <oleg.ablov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
grpcio = "^1.74.0"
grpcio-tools = "^1.74.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
alembic = "^1.16.5"
asyncpg = "^0.30.0"
pydantic = "^2.11.7"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
